// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepResult /> should render no results 1`] = `
.c2 {
  margin-bottom: 1.6rem;
  padding: 1rem 2rem;
  color: #3e486e;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
  border-radius: 0.6rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Nombre d’heures
  </h2>
  <p>
    À partir des éléments que vous avez saisis, le nombre d’heures pour recherche d’emploi est estimé à 
    <strong
      class="c1"
    >
      la convention collective ne prévoit pas d'heures de recherche d'emploi.
    </strong>
    .
  </p>
  <div
    class="c2"
  >
    Un accord d’entreprise ou à défaut un usage dans la profession ou l’entreprise plus récent peut prévoir l’existence, le cadre et une durée différentes des absences pour rechercher un emploi au cours du préavis.
  </div>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <ul>
    <li>
      Convention collective
       : 
      <strong>
        Entreprises de la publicité et assimilées
      </strong>
    </li>
    <li>
      Période essai
       : 
      <strong>
        oui
      </strong>
    </li>
    <li>
      Catégorie socio-professionnelle
       : 
      <strong>
        Employés
      </strong>
    </li>
  </ul>
  <h2
    class="c0"
  >
    Source
  </h2>
  <ul>
    <li>
      <a
        href="https://www.legifrance.gouv.fr/affichIDCCArticle.do;jsessionid=68C4D11B1B434910FCC8731A925B638E.tplgfr28s_1?idArticle=KALIARTI000022438632&cidTexte=KALITEXT000005682357&dateTexte=29990101&categorieLien=id"
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’article 15"
      >
        Article 15
      </a>
    </li>
  </ul>
</div>
`;

exports[`<StepResult /> should render with duration 1`] = `
.c2 {
  margin-bottom: 1.6rem;
  padding: 1rem 2rem;
  color: #3e486e;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
  border-radius: 0.6rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Nombre d’heures
  </h2>
  <p>
    À partir des éléments que vous avez saisis, le nombre d’heures pour recherche d’emploi est estimé à 
    <strong
      class="c1"
    >
      2 heures par jour
    </strong>
    .
  </p>
  <h2
    class="c0"
  >
    Rémunération
  </h2>
  <p>
    Le salaire est maintenu durant ces absences.
  </p>
  <h2
    class="c0"
  >
    Modalités d’utilisation
  </h2>
  <p>
    Un accord entre l'employeur et le salarié définit la prise de ces heures dans la journée, ou de façon groupée par demi-journées ou journées consécutives ou non. Lorsque le salarié a retrouvé un emploi, il doit immédiatement en avertir l'employeur, et ne pourra plus s'absenter dans ce cadre.
  </p>
  <div
    class="c2"
  >
    Un accord d’entreprise ou à défaut un usage dans la profession ou l’entreprise plus récent peut prévoir l’existence, le cadre et une durée différentes des absences pour rechercher un emploi au cours du préavis.
  </div>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <ul>
    <li>
      Convention collective
       : 
      <strong>
        Entreprises de la publicité et assimilées
      </strong>
    </li>
    <li>
      Période essai
       : 
      <strong>
        non
      </strong>
    </li>
    <li>
      Catégorie socio-professionnelle
       : 
      <strong>
        Employés
      </strong>
    </li>
    <li>
      Type de rupture
       : 
      <strong>
        démission
      </strong>
    </li>
  </ul>
  <h2
    class="c0"
  >
    Source
  </h2>
  <ul>
    <li>
      <a
        href="https://www.legifrance.gouv.fr/affichIDCCArticle.do?idArticle=KALIARTI000005857303&cidTexte=KALITEXT000005682357&dateTexte=19740607"
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’article 29"
      >
        Article 29
      </a>
    </li>
  </ul>
</div>
`;

exports[`<StepResult /> should render with when no CC 1`] = `
.c2 {
  margin-bottom: 1.6rem;
  padding: 1rem 2rem;
  color: #3e486e;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
  border-radius: 0.6rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Nombre d’heures
  </h2>
  <p>
    <strong
      class="c1"
    >
      Aucun résultat
    </strong>
     : 
    la convention collective n’a pas été renseignée.
  </p>
  <p>
    Le code du travail ne prévoit pas le droit pour le salarié de s’absenter pendant son préavis pour pouvoir rechercher un nouvel emploi. Il existe une exception dans les départements de la Moselle, du Bas-Rhin et du Haut-Rhin où le salarié, qui en fait la demande, a droit à un « délai raisonnable » pour rechercher un emploi.
  </p>
  <div
    class="c2"
  >
    Une convention collective, un accord d’entreprise ou un usage dans la profession ou l’entreprise peut prévoir et encadrer des absences pour rechercher un emploi au cours du préavis.
  </div>
  <h2
    class="c0"
  >
    Source
  </h2>
  <ul>
    <li>
      <a
        href="https://www.legifrance.gouv.fr/affichCodeArticle.do;jsessionid=CC74669AD1BB161A1534D72EE0B76FE4.tplgfr29s_3?idArticle=LEGIARTI000006901133&cidTexte=LEGITEXT000006072050&dateTexte=20200102"
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’l1234-17"
      >
        L1234-17
      </a>
    </li>
  </ul>
</div>
`;

exports[`<StepResult /> should render with when unhandled CC 1`] = `
.c2 {
  margin-bottom: 1.6rem;
  padding: 1rem 2rem;
  color: #3e486e;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
  border-radius: 0.6rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Nombre d’heures
  </h2>
  <p>
    <strong
      class="c1"
    >
      Aucun résultat
    </strong>
     : 
    la convention collective n’a pas encore été traitée par nos services.
  </p>
  <p>
    Le code du travail ne prévoit pas le droit pour le salarié de s’absenter pendant son préavis pour pouvoir rechercher un nouvel emploi. Il existe une exception dans les départements de la Moselle, du Bas-Rhin et du Haut-Rhin où le salarié, qui en fait la demande, a droit à un « délai raisonnable » pour rechercher un emploi.
  </p>
  <div
    class="c2"
  >
    Une convention collective, un accord d’entreprise ou un usage dans la profession ou l’entreprise peut prévoir et encadrer des absences pour rechercher un emploi au cours du préavis.
    <br />
    Vous pouvez faire une recherche par mots-clés dans
     
    <a
      href="/convention-collective/1561-cordonnerie-multiservice"
    >
      votre convention collective
    </a>
  </div>
  <h2
    class="c0"
  >
    Source
  </h2>
  <ul>
    <li>
      <a
        href="https://www.legifrance.gouv.fr/affichCodeArticle.do;jsessionid=CC74669AD1BB161A1534D72EE0B76FE4.tplgfr29s_3?idArticle=LEGIARTI000006901133&cidTexte=LEGITEXT000006072050&dateTexte=20200102"
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’l1234-17"
      >
        L1234-17
      </a>
    </li>
  </ul>
</div>
`;
